datasets/dataset_txt/pipenv/pipenv_1452.txt
dhruvinsh commented on 8 Mar 2018
When trying to run pipenv shell it fail to do so with error message below:
pipenv shell --verbose
File "", line 1
c:\python27\python.exe -c "from pew.pew import prevent_path_errors; prevent_path_errors()"
^
SyntaxError: invalid syntax
Environment
Windows 7
Python 2.7.14
pipenv, version 11.1.4
Steps to replicate
just try to run pipenv shell.
2